--- a/mmtf/mmtf-pyspark.yml
+++ b/mmtf/mmtf-pyspark.yml
@@ -2,33 +2,27 @@ name: mmtf-pyspark
 
 channels:
   - conda-forge
-  - anaconda
   - bioconda
   - defaults
 
 dependencies:
-  - python=3.7
-  - openjdk=8.0.152
-  - pyspark=2.4.0
-  - biopython=1.72
-  - numba=0.41.0
-  - numpy=1.16.1
-  - jupyterlab=3.2.5
-  - notebook 
-  - ipython
-  - ipywidgets
-  - widgetsnbextension
-  - jupyterlab_widgets
+  - python=3.8
+  - ipykernel
+  - openjdk
+  - pyspark
+  - biopython
+  - numba
+  - numpy
+  - openpyxl
   - traitlets
   - traittypes
   - anyio
   - py3Dmol
-  - openpyxl
   - pip
   - pip:
-      - git+https://github.com/sbl-sdsc/mmtf-pyspark.git 
+      - git+https://github.com/sbl-sdsc/mmtf-pyspark.git
 
 variables:
   SPARK_DRIVER_MEMORY: 16G
-  SPARK_DRIVER_MAXRESULTSIZE: 4G
-  SPARK_WORKER_MEMORY: 4G
+  SPARK_DRIVER_MAXRESULTSIZE: 8G
+  SPARK_WORKER_MEMORY: 8G
